--- a/src/static/nltk.html
+++ b/src/static/nltk.html
@@ -19,7 +19,7 @@
     </div>
     <div class="content">
         <div class="origin">
-            <div class="header">Origin Text111222</div>
+            <div class="header">Origin Text</div>
             <div class="content">
                 <textarea>The batting team attempts to score runs by hitting a ball that is thrown by the pitcher with a bat swung by the batter, then running counter-clockwise around a series of four bases: first, second, third, and home plate. A run is scored when a player advances around the bases and returns to home plate.
 
