--- a/src/mysite/nltk.html
+++ b/src/mysite/nltk.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
 
-    <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./css/nltk.css"/>
+    <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/static/css/nltk.css"/>
 
 </head>
 <body>
